<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit_project">Submit</string>
    <string name="badge">Badge</string>
    <string name="title_activity_project_submission">ProjectSubmissionActivity</string>
    <string name="mini_logo">Mini Logo</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="github_link_hint">Project on GITHUB (link)</string>
    <string name="close_button">Close Button</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="success_dialog">Success Dialog</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="full_logo">Full Logo</string>
</resources>